tests/baselines/reference/parserAccessors1.errors.txt
parserAccessors1.ts(2,9): error TS2378: A 'get' accessor must return a value.


==== parserAccessors1.ts (1 errors) ====
    class C {
        get Foo() { }
            ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }